# tiro-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: python-package-manager.mdc
data/: Online_Mind2Web.json
instructions/: todos.md
output/: analysis.ipynb
scripts/: add_num_to_json.py  analysis.py  remove_llm_error_runs.py  remove_unfinished_tasks.py  run_evaluation.sh  run_tasks.sh  run_webjudge.sh  update_errors_to_newest.py
scripts/analyzer/: analysis.py  prompts.py
tests/: test_actions.py  test_agent.py  test_example.py  test_utils.py
tests/data/task_data_002/: action_history.txt  result.json
web_agent/: __main__.py  main.py  runner.py  utils.py
web_agent/agent/: actions.py  agent.py  prompts.py  schema.py  schemas.py
web_agent/agent/actions/: actions.py  base.py  history.py  mouse-helper.js  parser.py  registry.py
web_agent/browser/: browser.py
web_agent_analyzer/: __main__.py  analyzer.py  error_evaluator.py  loader.py  prompts.py  reporter.py  schemas.py
web_judge/: clean_html.py  run.py  utils.py
web_judge/methods/: agenttrek_eval.py  automomous_eval.py  webjudge_general_eval.py  webjudge_online_mind2web.py  webvoyager_eval.py
