[project]
name = "stealth-browser"
version = "0.1.0"
description = "A stealth playwright browser including a captcha solving extension."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "2captcha-python>=1.5.1",
    "dotenv>=0.9.9",
    "playwright-stealth>=1.0.6",
    "pytest-playwright>=0.7.0",
    "setuptools>=80.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]

# Ruff linting and formating
[tool.ruff]
# Rule sets to enable:
# E: pycodestyle errors (PEP 8)
# F: pyflakes (basic Python errors)
# I: isort (import sorting)
# N: pep8-naming (naming conventions)
# W: pycodestyle warnings
# B: flake8-bugbear (catches likely bugs)
# UP: pyupgrade (suggests Python upgrades)
# PL: pylint (additional style checks)
# RUF: Ruff-specific rules
lint.select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]
lint.fixable = ["ALL"] # Enable auto-fixing for all fixable issues
lint.unfixable = []
lint.ignore = ["W191", ] # Ignore tab indentation warnings since we're using tabs
target-version = "py313" # Target Python version 3.13 for modern feature suggestions
indent-width = 4

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["stealth_browser"]
force-single-line = true
