[project]
name = "web-agent"
version = "0.1.0"
description = "An automated web agent with a stealth browser"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "2captcha-python>=1.5.1",
    "dotenv>=0.9.9",
    "nest-asyncio>=1.6.0",
    "playwright>=1.52.0",
    "playwright-stealth>=1.0.6",
    "pydantic>=2.11.5",
    "pydantic-ai>=0.2.12",
    "pytest-playwright>=0.7.0",
    "setuptools>=80.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]

# Ruff linting and formating
[tool.ruff]
target-version = "py313" # Target Python version 3.13 for modern feature suggestions
indent-width = 4
line-length = 130

[tool.ruff.lint]
# Ruff linting rules: https://docs.astral.sh/ruff/rules/
# E: pycodestyle errors (PEP 8)
# F: pyflakes (basic Python errors)
# I: isort (import sorting)
# N: pep8-naming (naming conventions)
# W: pycodestyle warnings
# B: flake8-bugbear (catches likely bugs)
# UP: pyupgrade (suggests Python upgrades)
# PL: pylint (additional style checks)
# RUF: Ruff-specific rules
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]
fixable = ["ALL"] # Enable auto-fixing for all fixable issues
unfixable = []
ignore = ["W191", ] # Ignore tab indentation warnings since we're using tabs

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["web_agent"]
