[project]
name = "web-agent"
version = "0.1.0"
description = "An automated web agent with a stealth browser"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "nest-asyncio>=1.6.0",
    "playwright>=1.52.0",
    "pydantic>=2.11.5",
    "pydantic-ai[logfire]>=0.2.12",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-playwright>=0.7.0",
    "ruff>=0.11.12",
    "web-agent",
]
web-judge = [
    "backoff>=2.2.1",
    "beautifulsoup4>=4.13.4",
    "openai>=1.83.0",
    "pillow>=11.2.1",
]

[tool.uv]
default-groups = "all"

# Ruff linting and formating
[tool.ruff]
target-version = "py313" # Target Python version 3.13 for modern feature suggestions
indent-width = 4
line-length = 140

[tool.ruff.lint]
# Ruff linting rules: https://docs.astral.sh/ruff/rules/
# E: pycodestyle errors (PEP 8)
# F: pyflakes (basic Python errors)
# I: isort (import sorting)
# N: pep8-naming (naming conventions)
# W: pycodestyle warnings
# B: flake8-bugbear (catches likely bugs)
# UP: pyupgrade (suggests Python upgrades)
# PL: pylint (additional style checks)
# RUF: Ruff-specific rules
# ANN: flake8-annotations (type annotations)
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF", "ANN"]
fixable = ["ALL"] # Enable auto-fixing for all fixable issues
unfixable = []
ignore = ["W191", ] # Ignore tab indentation warnings since we're using tabs

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
line-ending = "auto"

[tool.uv.sources]
web-agent = { workspace = true }

[tool.ruff.lint.isort]
known-first-party = ["web_agent"]
